commit and push

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/gitexample/FileContentIndex
+/.vs/empty/FileContentIndex
